# card-game

./: CMakeLists.txt  README.md  autobuilder.py
include/: card.hpp  deck.hpp  game.hpp  player.hpp
scripts/: build.sh
src/: card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp
